--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -18,13 +18,18 @@
         android:layout_marginBottom="@dimen/_18sdp"
         android:orientation="horizontal">
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/closeIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:src="@drawable/ic_x" />
+            android:paddingRight="@dimen/_15sdp">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_x"
+                android:visibility="visible" />
+        </LinearLayout>
         <ImageView
             android:id="@+id/backIV"
             android:layout_width="wrap_content"
