--- a/app/src/main/res/layout/canceltransaction.xml
+++ b/app/src/main/res/layout/canceltransaction.xml
@@ -23,6 +23,7 @@
 
 
     <TextView
+        android:id="@+id/cancelDescTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
