Feature Controls Payment Methods

--- a/app/src/main/res/layout/selectwithdrawmethod.xml
+++ b/app/src/main/res/layout/selectwithdrawmethod.xml
@@ -192,12 +192,12 @@
                     android:src="@drawable/ic_gift_card" />
 
                 <LinearLayout
+                    android:id="@+id/lyGCInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_14sdp"
                     android:layout_toRightOf="@+id/imgGCardLogo"
                     android:orientation="vertical">
-
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -219,7 +219,34 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/layoutError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lyGCInfo"
+                    android:layout_toRightOf="@+id/imgGCardLogo"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_erro" />
+
+                    <TextView
+                        android:id="@+id/tvError"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/noFeature"
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_10ssp"></TextView>
+
+                </LinearLayout>
+
                 <ImageView
+                    android:id="@+id/imgGCArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
