--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/back_button"
-                    android:src="@drawable/ic_chevron_left" />
+                    android:src="@drawable/ic_back" />
             </LinearLayout>
 
             <TextView
@@ -154,6 +154,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/opensans_semibold"
+                            android:hint=""
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:longClickable="false"
@@ -165,7 +166,7 @@
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textIsSelectable="false"
                             android:textSize="@dimen/_12ssp"
-                            app:mask="__/__" />
+                            app:mask="__/__"  />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
