--- a/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
+++ b/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
@@ -13,11 +13,11 @@
         android:orientation="horizontal">
 
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/weightRL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1.7"
             android:orientation="vertical">
 
             <View
@@ -27,23 +27,25 @@
 
             <LinearLayout
                 android:id="@+id/ssnDDLL"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:gravity="center">
+                android:layout_marginStart="@dimen/_5sdp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
 
                 <TextView
                     android:id="@+id/ssnType"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="SSN"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_11ssp"
+                    android:layout_weight="1"/>
 
                 <ImageView
                     android:id="@+id/dropdownIV"
@@ -59,7 +61,7 @@
                     android:background="@color/light_gray" />
             </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/ssnET"
@@ -76,7 +78,7 @@
             android:imeOptions="actionDone"
             android:importantForAutofill="noExcludeDescendants"
             android:maxLines="1"
-            android:padding="14dp"
+            android:padding="@dimen/_5sdp"
             android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
@@ -99,7 +101,7 @@
             android:importantForAutofill="noExcludeDescendants"
             android:inputType="number"
             android:maxLines="1"
-            android:padding="14dp"
+            android:padding="@dimen/_5sdp"
             android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
