New changes in customer and merchant profile

--- a/app/src/main/res/layout/under_review_error_msg_dialog.xml
+++ b/app/src/main/res/layout/under_review_error_msg_dialog.xml
@@ -48,6 +48,16 @@
             android:text="@string/not_available_description"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
+        <TextView
+            android:id="@+id/tvMessage2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:lineHeight="@dimen/_26sdp"
+            android:text=""
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/okCV"
