--- a/app/src/main/res/layout/under_review_error_msg_dialog.xml
+++ b/app/src/main/res/layout/under_review_error_msg_dialog.xml
@@ -52,10 +52,10 @@
             android:id="@+id/tvMessage2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/opensans_semibold"
             android:lineHeight="@dimen/_26sdp"
-            android:text=""
+            android:text="ewrtyuiodfghjkjhgfdsdyuiuytrdfghiugfd"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
 
