Transactions Details Log Changes

--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -533,7 +533,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:id="@+id/tv_activity_log"
+                    android:id="@+id/activity_log_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_21sdp"
