--- a/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
+++ b/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
@@ -586,9 +586,7 @@
                     android:text="Activity Log"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp"
-                    android:visibility="gone"
-
-                    />
+                    android:visibility="gone" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cv_activity_log"
